# CineAPI

./: pyproject.toml
alembic/: env.py
alembic/versions/: 8efcd82bdd6e_init_movies_table.py  93c24965e88f_add_movie_uniqueness_constraint.py
app/: config.py  database.py  exceptions.py  logging_config.py  main.py  models.py  routes.py  schemas.py
app/dependencies/: auth.py
app/repositories/: movie_repository.py
app/services/: movie_service.py
